Fix height issues on mobile (100vh -> innerHeight)

--- a/src/components/nav/opened-nav-component/opened-nav-component.scss
+++ b/src/components/nav/opened-nav-component/opened-nav-component.scss
@@ -1,7 +1,7 @@
 @use "../nav-component" as nav;
 
 .nav__component--opened {
-  @include nav.nav-component(100vh);
+  @include nav.nav-component(100%);
 
   display: flex;
   flex-direction: column;
@@ -16,7 +16,7 @@
   }
 
   &--off {
-    bottom: -100vh;
+    bottom: -100%;
     transition-delay: 0s;
   }
 }
